--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -82,6 +82,7 @@ allow 107.189.8.226;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
+allow 107.189.8.70;
 allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
@@ -681,7 +682,6 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
-allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.61.60;
@@ -1003,7 +1003,6 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
-allow 2407:1c00:6100:5640::;
 allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
@@ -1040,7 +1039,6 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1362::2;
-allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1219,6 +1217,7 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1274,6 +1273,7 @@ allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+allow 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
 allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
@@ -1297,6 +1297,7 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
+allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
@@ -1682,6 +1683,7 @@ allow 2c0f:6c0:0:3::479d;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.42.177.222;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1705,7 +1707,6 @@ allow 38.135.24.31;
 allow 38.135.24.32;
 allow 38.135.24.33;
 allow 38.135.24.72;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1821,6 +1822,7 @@ allow 45.90.185.68;
 allow 45.91.250.107;
 allow 45.9.168.103;
 allow 45.9.168.18;
+allow 45.9.168.192;
 allow 45.94.31.68;
 allow 45.95.169.104;
 allow 45.95.169.109;
@@ -1835,6 +1837,7 @@ allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.250.243.29;
 allow 46.30.188.218;
+allow 46.38.243.210;
 allow 5.104.84.183;
 allow 5.104.86.6;
 allow 51.15.59.15;
@@ -1852,6 +1855,7 @@ allow 5.255.105.180;
 allow 5.255.111.64;
 allow 5.255.115.58;
 allow 5.255.117.56;
+allow 5.255.118.218;
 allow 5.255.121.71;
 allow 5.255.123.158;
 allow 5.255.123.164;
@@ -1931,6 +1935,7 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
@@ -1998,5 +2003,4 @@ allow 95.143.193.125;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 95.216.107.148;
-allow 97.74.89.52;
 allow 98.128.173.33;
