--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -212,7 +212,6 @@ allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
-allow 176.58.121.177;
 allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
@@ -281,6 +280,7 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
 allow 185.132.53.6;
+allow 185.14.31.113;
 allow 185.146.232.234;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -527,7 +527,6 @@ allow 185.40.4.100;
 allow 185.40.4.101;
 allow 185.40.4.121;
 allow 185.40.4.127;
-allow 185.40.4.128;
 allow 185.40.4.132;
 allow 185.40.4.149;
 allow 185.40.4.150;
@@ -682,6 +681,7 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
+allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.61.60;
@@ -1003,6 +1003,7 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2407:1c00:6100:5640::;
 allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
@@ -1023,6 +1024,8 @@ allow 2600:3c0a::f03c:95ff:fe1e:2a6;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2e5::104;
+allow 2602:f6f6:2:2634::1;
+allow 2602:f6f6:2:d31a::1;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
@@ -1039,6 +1042,7 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1362::2;
+allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1239,7 +1243,6 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
@@ -1577,7 +1580,6 @@ allow 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 allow 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:a0e::1;
-allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1976,7 +1978,6 @@ allow 92.246.84.133;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
-allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
@@ -2003,4 +2004,5 @@ allow 95.143.193.125;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 95.216.107.148;
+allow 97.74.89.52;
 allow 98.128.173.33;
